[metadata]
name = pyaugsynth
version = 0.0.1
author = Stiofán Fordham
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Synth,augsynth,synthetic,controls,method
license = MIT License

[options]
packages = pyaugsynth,
python_requires = >=3.8
install_requires =
    numpy == 1.24.0
    matplotlib == 3.6.2
    pandas == 1.5.2
    scipy == 1.9.3

[options.extras_require]
dev = 
    black == 22.12.0
