[metadata]
name = pysyncon
version = 0.2.1
author = Stiofán Fordham
url = https://github.com/sdfordham/pysyncon/
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Synth,augsynth,synthetic-control-method,causal-inference,
license = MIT License

[options]
packages = pysyncon,
python_requires = >=3.8
install_requires =
    numpy == 1.24.0
    matplotlib == 3.6.2
    pandas == 1.5.2
    scipy == 1.9.3

[options.extras_require]
dev = 
    black == 22.12.0
